added flex-box functionality

--- a/index.html
+++ b/index.html
@@ -67,6 +67,30 @@
 
 <!--More content to come after this, but before complete the above!-->
 
+<!--Adding a warning and Information flexbox-->
+<!--Pranay, bhai apne, hisaab se dekh liyo... flex box main jo bhi changes laane ho karliyo
+iss flex box ke main uses hain :-
+
+1. To make sure user selects an algorithm before pressing start button (matlab warning deni hain)
+2. To make sure the "wait" string appears if the user selects an algorithm in between the process.boingInUp
+3. At the end of the process, give results like (time taken), (path distance) etc.boingInUp
+
+baaki aish kar!
+
+Aur haan samajh le saara jitna bhi code kiya hain!
+
+-->
+<div class ="d-flex flex-column" id="results">
+  <div class="d-flex justify-content-center"> 
+    <i id="resultsIcon" class="fas fa-exclamation"></i>
+  </div>
+  <div id="duration" class="d-flex justify-content-center"> 
+     Please select an algorithm and press start.
+   </div>
+   <div id="length" class="d-flex justify-content-center"> 	
+   </div>	 	
+</div>
+
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
