--- a/index.html
+++ b/index.html
@@ -68,16 +68,18 @@
 
 <!--Adding a warning and Information flexbox-->
 
-  <div class="d-flex justify-content-center"> 
+  <div class="d-flex flex-column" id="results">
+    <div class="d-flex justify-content-center"> 
     <i id="resultsIcon" class="fas fa-exclamation"></i>
   </div>
   <div id="duration" class="d-flex justify-content-center"> 
      Please select an algorithm and press start.
    </div>
-   <div id="length" class="d-flex justify-content-center"> 	
-   </div>	 	
+   <div id="length" class="d-flex justify-content-center">  
+   </div>   
 </div>
 
+  </div>
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
