--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <a href="#" class="dropdown-item">Dijkstra's Algorithm</a>
           <a href="#" class="dropdown-item">Breadth First Search</a>
-          <a href="#" class="dropdown-item">Depth First Search</a>
+    
         </div>
       </li>
       <li class="nav-item active dropdown" id="speed">
@@ -69,13 +69,14 @@
 <!--Adding a warning and Information flexbox-->
 
   <div class="d-flex flex-column" id="results">
-    <div class="d-flex justify-content-center"> 
+    <!-- <div class="d-flex justify-content-center">
     <i id="resultsIcon" class="fas fa-exclamation"></i>
-  </div>
+  </div> -->
   <div id="duration" class="d-flex justify-content-center"> 
-     Please select an algorithm and press start.
+     !
    </div>
    <div id="length" class="d-flex justify-content-center">  
+   	Please select an algorithm and press start.
    </div>   
 </div>
 
