--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
         </div>
       </li>
-      <li class="nav-item active dropdown" id="speed">
+      <li class="nav-item active dropdown">
        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
         arias-haspopup="true" aria-expanded="false">Speed</a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -39,20 +39,50 @@
           <a href="#" class="dropdown-item">Slow</a>
         </div>
       </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="#">About Page</a>
-      </li>
     </ul>
 
     <button class="btn btn-success btn-space" type="submit" id="startBtn">Start</button>
     <button type="button" class="btn btn-primary btn-space" type="submit" id="clearBtn">Clear Board</button>
-
+<button type="button" class="btn btn-info" data-toggle="modal" data-target="#exampleModalLong">Website Info Modal</button>
   </div>
 </nav>
 <!--Here the NavBar work will end-->
 
 
-<!--Here the legend and colour-description of the nodes visited will be shown-->
+<!--Here the legend and colour-description of the nodes visited will be shown  -->
+
+
+<div class="d-flex flex-column">  
+    <div class="d-flex justify-content-center">
+      <div class="key wall"></div>  
+      <div> Wall</div>
+    </div>
+    <div class="d-flex justify-content-center">
+      <div class="key start"></div>  
+      <div>Start</div>
+    </div>
+    <div class="d-flex justify-content-center">
+      <div class="key end"></div>  
+      <div>Target</div>
+    </div>
+    <div class="d-flex justify-content-center">
+      <div class="key searching"></div>  
+      <div class="key visited"></div>  
+      <div>Visited</div>
+    </div>
+    <div class="d-flex justify-content-center">
+      <div class="key success"></div>  
+      <div>Shortest-Path</div>
+    </div>
+    <div class="d-flex justify-content-center">
+      <div class="key"></div>  
+      <div>Unvisited</div>
+    </div>
+  </div>
+
+<div class="d-flex flex-column align-items-center" id="bigTableContainer">
+    <div id="tableContainer"></div>    
+   </div>   
 
 
 <!--Here the legend work will finish-->
@@ -63,6 +93,10 @@
 <div class="d-flex flex-column align-items-center" id="bigTableContainer">
     <div id="tableContainer"></div>    
 </div> 
+
+
+
+
 
 <!--More content to come after this, but before complete the above!-->
 
@@ -81,6 +115,54 @@
 </div>
 
   </div>
+
+
+<!--This is our Info Modal!!!-->
+
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">About this Project!!!</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        This is our Path Finding Algorithm Visualizer Project which we had completed while actively participating in the Microsoft's Mars Colonization Program.
+
+        Our main aim was to help build a shortest-path algorithm visualizer which could help the user find the shortest distance between any two points and the same concept can be very much useful when practically apllying the concept for building rovers and vehicles that could help humans traverse far destinations in less time using less energy with the help of some basic algorithms.
+        
+        In our this Project we have used two simple shortest-path finding algorithms:-
+        1. Dijkstra's Algorithm.
+        2. Breadth First Search Algorithm
+
+        You can select the desired Algorithm by clicking on the choosen algorithm from the Algorithms Tab and then select the desired speed of the animation to continue and have fun visualizing the process after clicking the Start Button.
+
+        At the end, if you wish to re-use the table you can simply click on the Clear Board button on the NavBar and it will remove all the walls and the animated cells.
+
+        At the bottom-right corner there is a flex-box which will give the information about time taken and the length of the Shortest Path Traversed in units by the algorithm and the animation.
+
+        In the end, we would like to thank our mentors, friends and seniors who have helped us with some concepts of animation using JavaScript and styling it using CSS.
+
+        We really enjoyed the process as it was full of learning and improving upon some old known skills and also developed our first project.
+
+        We intend to work more upon this and add new algorithms like A* and JumpPointSearch after studying them and having a good knowledge about them. We also have to work more upon the website front-end and will improve more on the styling part as well.
+
+        Well Wishes to the user and Happy Browsing:)!!
+
+              - Pranay Mishra and Meghaj Singh 
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
