--- a/index.html
+++ b/index.html
@@ -52,33 +52,36 @@
 <!--Here the legend and colour-description of the nodes visited will be shown  -->
 
 
-<div class="d-flex flex-column">  
-    <div class="d-flex justify-content-center">
-      <div class="key wall"></div>  
-      <div> Wall</div>
-    </div>
-    <div class="d-flex justify-content-center">
-      <div class="key start"></div>  
-      <div>Start</div>
-    </div>
-    <div class="d-flex justify-content-center">
-      <div class="key end"></div>  
-      <div>Target</div>
-    </div>
-    <div class="d-flex justify-content-center">
-      <div class="key searching"></div>  
-      <div class="key visited"></div>  
-      <div>Visited</div>
-    </div>
-    <div class="d-flex justify-content-center">
-      <div class="key success"></div>  
-      <div>Shortest-Path</div>
-    </div>
-    <div class="d-flex justify-content-center">
-      <div class="key"></div>  
-      <div>Unvisited</div>
-    </div>
-  </div>
+<div class="d-flex flex-row flex-wrap m-2 justify-content-around bg-light">	
+ 		<div class="d-flex p-2">
+ 			<div class="key wall"></div>  
+ 			<div> Wall</div>
+ 		</div>
+ 		<div class="d-flex p-2">
+ 			<div class="key start"></div>  
+ 			<div>Start</div>
+ 		</div>
+ 		<div class="d-flex p-2">
+ 			<div class="key end"></div>  
+ 			<div>Target</div>
+ 		</div>
+ 		<div class="d-flex p-2">
+ 			<div class="key searching"></div>  
+ 			<div>Searching</div>
+ 		</div>
+ 		<div class="d-flex p-2">
+ 			<div class="key visited"></div>  
+ 			<div>Visited</div>
+ 		</div>
+ 		<div class="d-flex p-2">
+ 			<div class="key success"></div>  
+ 			<div>Shortest-Path</div>
+ 		</div>
+ 		<div class="d-flex p-2">
+ 			<div class="key"></div>  
+ 			<div>Unvisited</div>
+ 		</div>
+ 	</div>
 
 <div class="d-flex flex-column align-items-center" id="bigTableContainer">
     <div id="tableContainer"></div>    
