Modified the Modal Flex

--- a/index.html
+++ b/index.html
@@ -130,35 +130,33 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">About this Project!!!</h5>
+        <h5 class="modal-title" id="exampleModalLongTitle" align="center">About this Project!!!</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        This is our Path Finding Algorithm Visualizer Project which we had completed while actively participating in the Microsoft's Mars Colonization Program.
+        <p>This is our Path Finding Algorithm Visualizer Project which we had completed while actively participating in the Microsoft's Mars Colonization Program.</p>
 
-        Our main aim was to help build a shortest-path algorithm visualizer which could help the user find the shortest distance between any two points and the same concept can be very much useful when practically apllying the concept for building rovers and vehicles that could help humans traverse far destinations in less time using less energy with the help of some basic algorithms.
+        <p>Our main aim was to help build a shortest-path algorithm visualizer which could help the user find the shortest distance between any two points and the same concept can be very much useful when practically apllying the concept for building rovers and vehicles that could help humans traverse far destinations in less time using less energy with the help of some basic algorithms.</p>
         
-        In our this Project we have used two simple shortest-path finding algorithms:-
-        1. Dijkstra's Algorithm.
-        2. Breadth First Search Algorithm
+        <p>In this Project we have used two simple shortest-path finding algorithms:-
+        <li>Dijkstra's Algorithm</li>
+        <li>Breadth First Search Algorithm</li></p>
 
-        You can select the desired Algorithm by clicking on the choosen algorithm from the Algorithms Tab and then select the desired speed of the animation to continue and have fun visualizing the process after clicking the Start Button.
+        <p>You can select the desired Algorithm by clicking on the choosen algorithm from the Algorithms Tab and then select the desired speed of the animation to continue and have fun visualizing the process after clicking the Start Button.</p>
 
-        At the end, if you wish to re-use the table you can simply click on the Clear Board button on the NavBar and it will remove all the walls and the animated cells.
+        <p>At the end, if you wish to re-use the table you can simply click on the Clear Board button on the NavBar and it will remove all the walls and the animated cells.</p>
 
-        At the bottom-right corner there is a flex-box which will give the information about time taken and the length of the Shortest Path Traversed in units by the algorithm and the animation.
+        <p>At the bottom-right corner there is a flex-box which will give the information about time taken and the length of the Shortest Path Traversed in units by the chosen algorithm.</p>
 
-        In the end, we would like to thank our mentors, friends and seniors who have helped us with some concepts of animation using JavaScript and styling it using CSS.
+        <p>In the end, we would like to thank our mentors, friends and seniors who have helped us with some concepts of animation using JavaScript and styling it using CSS.</p>
 
-        We really enjoyed the process as it was full of learning and improving upon some old known skills and also developed our first project.
+        <p>We intend to work more upon this and add new algorithms like A* and JumpPointSearch after studying them and having a good knowledge about them. We also have to work more upon the website front-end and will improve more on the styling part as well.</p>
 
-        We intend to work more upon this and add new algorithms like A* and JumpPointSearch after studying them and having a good knowledge about them. We also have to work more upon the website front-end and will improve more on the styling part as well.
+        <p>Well wishes to the user and Happy Browsing :)!!</p>
 
-        Well Wishes to the user and Happy Browsing:)!!
-
-              - Pranay Mishra and Meghaj Singh 
+              - Meghaj Singh and Pranay Mishra
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
