--- a/index.html
+++ b/index.html
@@ -82,7 +82,12 @@
  			<div>Unvisited</div>
  		</div>
  	</div>
-
+<div class="d-flex flex-row flex-wrap m-2 justify-content-around bg-warning">	
+ 		<div class="d-flex p-2">
+ 			*The shortest path displayed is on the basis of the number of cell transitions.
+ 		</div>
+ 		
+ 	</div>
 <div class="d-flex flex-column align-items-center" id="bigTableContainer">
     <div id="tableContainer"></div>    
    </div>   
